--- a/toolkit/data-sources/db-sync/Cargo.toml
+++ b/toolkit/data-sources/db-sync/Cargo.toml
@@ -34,9 +34,7 @@ substrate-prometheus-endpoint = { workspace = true }
 derive-new = { workspace = true }
 lru = { workspace = true }
 sp-timestamp = { workspace = true, features = ["std"] }
-sp-governed-map = { workspace = true, features = [
-    "std",
-], optional = true }
+sp-governed-map = { workspace = true, features = ["std"], optional = true }
 sp-native-token-management = { workspace = true, features = [
     "std",
 ], optional = true }
@@ -54,7 +52,7 @@ sp-block-participation = { workspace = true, features = [
 [dev-dependencies]
 tokio-test = "0.4.3"
 ctor = "0.4.1"
-testcontainers-modules = { version = "0.1.3", features = ["postgres"] }
+testcontainers-modules = { version = "0.12", features = ["postgres"] }
 pretty_assertions = { workspace = true }
 
 [features]
