--- a/toolkit/data-sources/db-sync/Cargo.toml
+++ b/toolkit/data-sources/db-sync/Cargo.toml
@@ -52,10 +52,7 @@ sp-block-participation = { workspace = true, features = [
 [dev-dependencies]
 tokio-test = "0.4.3"
 ctor = "0.4.1"
-testcontainers-modules = { version = "0.12", features = [
-    "blocking",
-    "postgres",
-] }
+testcontainers-modules = { version = "0.12", features = ["postgres"] }
 pretty_assertions = { workspace = true }
 
 [features]
