--- a/.github/actions/tests/local-environment-wizards-tests/action.yml
+++ b/.github/actions/tests/local-environment-wizards-tests/action.yml
@@ -41,7 +41,7 @@ runs:
         docker compose up -d
         cd ../../
       shell: bash
-    - name: Wait for partner-chains-node-1 to start
+    - name: Wait for partner-chains-wizard-1 to start
       id: wait-pc-node
       continue-on-error: true
       run: |
@@ -56,23 +56,23 @@ runs:
         max_restarts=10
 
         # Wait for the Partner Chain node to be ready or until max restarts or epoch 2 is reached
-        while ! docker exec partner-chains-node-1 [ -e /shared/partner-chains-node-1.ready ]; do
+        while ! docker exec partner-chains-wizard-1 [ -e /shared/partner-chains-wizard-1.ready ]; do
           epoch=$(docker exec cardano-node-1 cardano-cli latest query tip --testnet-magic 42 | jq -r .epoch)
           echo "Epoch: $epoch"
-          container_status=$(docker inspect -f '{{.State.Status}}' partner-chains-node-1)
+          container_status=$(docker inspect -f '{{.State.Status}}' partner-chains-wizard-1)
           echo "Container status: $container_status"
           if [ "$container_status" = "restarting" ]; then
             restart_count=$((restart_count + 1))
-            echo "partner-chains-node-1 is restarting ($restart_count/$max_restarts)"
+            echo "partner-chains-wizard-1 is restarting ($restart_count/$max_restarts)"
             if [ "$restart_count" -ge "$max_restarts" ]; then
-              echo "partner-chains-node-1 has restarted $restart_count times. Failing early."
+              echo "partner-chains-wizard-1 has restarted $restart_count times. Failing early."
               exit 1
             fi
           else
             restart_count=0
           fi
           if [ "$epoch" -ge 2 ]; then
-            echo "Epoch has reached 2 and partner-chains-node-1 is still not ready."
+            echo "Epoch has reached 2 and partner-chains-wizard-1 is still not ready."
             exit 1
           fi
           sleep 10
@@ -80,17 +80,17 @@ runs:
       shell: bash
     - name: Collect Docker logs
       run: |
-        mkdir -p local-environment-logs-initial
+        mkdir -p local-environment-wizards-logs-initial
         docker ps -a --format '{{.Names}}' | while read line; do
           echo "Collecting logs for container $line"
-          docker logs "$line" > "local-environment-logs-initial/$line.log" 2>&1 || true
+          docker logs "$line" > "local-environment-wizards-logs-initial/$line.log" 2>&1 || true
         done
       shell: bash
     - name: Upload Docker logs artifact
       uses: actions/upload-artifact@v4
       with:
-        name: local-environment-logs-initial
-        path: local-environment-logs-initial/
+        name: local-environment-wizards-logs-initial
+        path: local-environment-wizards-logs-initial/
     - name: Fail the job
       if: ${{ steps.wait-pc-node.outcome == 'failure' }}
       run: exit 1
@@ -98,18 +98,18 @@ runs:
     - name: Collect container logs
       if: always()
       run: |
-        mkdir -p local-environment-logs-full
+        mkdir -p local-environment-wizards-logs-full
         docker ps -a --format '{{.Names}}' | while read line; do
           echo "Collecting logs for container $line"
-          docker logs "$line" > "local-environment-logs-full/$line.log" 2>&1 || true
+          docker logs "$line" > "local-environment-wizards-logs-full/$line.log" 2>&1 || true
         done
       shell: bash
     - name: Upload container logs
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: local-environment-logs-full
-        path: local-environment-logs-full/
+        name: local-environment-wizards-logs-full
+        path: local-environment-wizards-logs-full/
     - name: Setup python and dependencies
       run: |
         cd e2e-tests
