--- a/.github/actions/tests/local-environment-wizards-tests/action.yml
+++ b/.github/actions/tests/local-environment-wizards-tests/action.yml
@@ -125,6 +125,51 @@ runs:
         pip install -r requirements.txt
         cd ..
       shell: bash
+    - name: Wait for epoch 3
+      if: ${{ inputs.tests == 'postmerge' }}
+      uses: ./.github/actions/tests/wait-for-epoch
+      with:
+        epoch: 3
+        deployment: docker
+        node: cardano-node-1
+        environment:
+    - name: Wait for partner-chains-wizard-3 to start
+      id: wait-pc-node
+      continue-on-error: true
+      run: |
+        # Wait for the Cardano node to be ready
+        while ! docker exec cardano-node-1 [ -e /shared/cardano.ready ]; do sleep 1; done
+        echo "Cardano network is ready! Waiting for Partner Chain first node to start..."
+        INIT_TIMESTAMP=$(docker exec cardano-node-1 cat /shared/cardano.start)
+        echo "INIT_TIMESTAMP=$INIT_TIMESTAMP" >> $GITHUB_ENV
+
+        epoch=0
+        restart_count=0
+        max_restarts=10
+
+        # Wait for the Partner Chain node to be ready or until max restarts or epoch 2 is reached
+        while ! docker exec partner-chains-wizard-3 [ -e /shared/partner-chains-wizard-3.ready ]; do
+          epoch=$(docker exec cardano-node-1 cardano-cli latest query tip --testnet-magic 42 | jq -r .epoch)
+          echo "Epoch: $epoch"
+          container_status=$(docker inspect -f '{{.State.Status}}' partner-chains-wizard-1)
+          echo "Container status: $container_status"
+          if [ "$container_status" = "restarting" ]; then
+            restart_count=$((restart_count + 1))
+            echo "partner-chains-wizard-3 is restarting ($restart_count/$max_restarts)"
+            if [ "$restart_count" -ge "$max_restarts" ]; then
+              echo "partner-chains-wizard-3 has restarted $restart_count times. Failing early."
+              exit 1
+            fi
+          else
+            restart_count=0
+          fi
+          if [ "$epoch" -ge 3 ]; then
+            echo "Epoch has reached 3 and partner-chains-wizard-3 is still not ready."
+            exit 1
+          fi
+          sleep 10
+        done
+      shell: bash
     - name: Run tests
       run: |
         cd e2e-tests
