--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -82,103 +82,7 @@ runs:
         fi
 
         # Define pytest command based on test mode
-        if [ "${{ inputs.tests }}" = "smoke" ]; then
-          pytest_cmd="pytest --blockchain '${{ inputs.blockchain }}' \
-            --env '${{ inputs.env }}' \
-            --log-cli-level '${{ inputs.log_level }}' \
-            -k 'smoke' \
-            -m 'smoke' \
-            -n '${{ inputs.threads}}' \
-            --dist=loadgroup \
-            --ci-run \
-            --init-timestamp '${{ inputs.init_timestamp }}' \
-            ${decrypt_switch} \
-            --json-report \
-            --json-report-file=logs/.report.json \
-            --json-report-summary \
-            --junitxml=logs/junit_report.xml"
-
-        elif [ "${{ inputs.tests }}" = "rpc" ]; then
-          pytest_cmd="pytest --blockchain '${{ inputs.blockchain }}' \
-            --env '${{ inputs.env }}' \
-            --log-cli-level '${{ inputs.log_level }}' \
-            -k 'rpc' \
-            -m 'rpc' \
-            -n '${{ inputs.threads}}' \
-            --dist=loadgroup \
-            --ci-run \
-            --init-timestamp '${{ inputs.init_timestamp }}' \
-            ${decrypt_switch} \
-            --json-report \
-            --json-report-file=logs/.report.json \
-            --json-report-summary \
-            --junitxml=logs/junit_report.xml"
-
-        elif [ "${{ inputs.tests }}" = "reserve" ]; then
-          pytest_cmd="pytest --blockchain '${{ inputs.blockchain }}' \
-            --env '${{ inputs.env }}' \
-            --log-cli-level '${{ inputs.log_level }}' \
-            -k 'reserve' \
-            -m 'reserve' \
-            -n '${{ inputs.threads}}' \
-            --dist=loadgroup \
-            --ci-run \
-            --init-timestamp '${{ inputs.init_timestamp }}' \
-            ${decrypt_switch} \
-            --json-report \
-            --json-report-file=logs/.report.json \
-            --json-report-summary \
-            --junitxml=logs/junit_report.xml"
-
-        elif [ "${{ inputs.tests }}" = "governed_map" ]; then
-          pytest_cmd="pytest --blockchain '${{ inputs.blockchain }}' \
-            --env '${{ inputs.env }}' \
-            --log-cli-level '${{ inputs.log_level }}' \
-            -k 'governed_map' \
-            -m 'governed_map' \
-            -n '${{ inputs.threads}}' \
-            --dist=loadgroup \
-            --ci-run \
-            --init-timestamp '${{ inputs.init_timestamp }}' \
-            ${decrypt_switch} \
-            --json-report \
-            --json-report-file=logs/.report.json \
-            --json-report-summary \
-            --junitxml=logs/junit_report.xml"
-
-        elif [ "${{ inputs.tests }}" = "delegator_rewards" ]; then
-          pytest_cmd="pytest --blockchain '${{ inputs.blockchain }}' \
-            --env '${{ inputs.env }}' \
-            --log-cli-level '${{ inputs.log_level }}' \
-            -k 'delegator_rewards' \
-            -m 'delegator_rewards' \
-            -n '${{ inputs.threads}}' \
-            --dist=loadgroup \
-            --ci-run \
-            --init-timestamp '${{ inputs.init_timestamp }}' \
-            ${decrypt_switch} \
-            --json-report \
-            --json-report-file=logs/.report.json \
-            --json-report-summary \
-            --junitxml=logs/junit_report.xml"
-
-        elif [ "${{ inputs.tests }}" = "ariadne" ]; then
-          pytest_cmd="pytest --blockchain '${{ inputs.blockchain }}' \
-            --env '${{ inputs.env }}' \
-            --log-cli-level '${{ inputs.log_level }}' \
-            -k 'ariadne' \
-            -m 'ariadne' \
-            -n '${{ inputs.threads}}' \
-            --dist=loadgroup \
-            --ci-run \
-            --init-timestamp '${{ inputs.init_timestamp }}' \
-            ${decrypt_switch} \
-            --json-report \
-            --json-report-file=logs/.report.json \
-            --json-report-summary \
-            --junitxml=logs/junit_report.xml"
-
-        else  # full mode
+        if [ "${{ inputs.tests }}" = "full" ]; then
           pytest_cmd="pytest --blockchain '${{ inputs.blockchain }}' \
             --env '${{ inputs.env }}' \
             --log-cli-level '${{ inputs.log_level }}' \
@@ -190,6 +94,20 @@ runs:
             ${mc_epoch_switch} \
             ${latest_mc_epoch_switch} \
             ${deployment_mc_epoch_switch} \
+            ${decrypt_switch} \
+            --json-report \
+            --json-report-file=logs/.report.json \
+            --json-report-summary \
+            --junitxml=logs/junit_report.xml"
+        else
+          pytest_cmd="pytest --blockchain '${{ inputs.blockchain }}' \
+            --env '${{ inputs.env }}' \
+            --log-cli-level '${{ inputs.log_level }}' \
+            -m '${{ inputs.tests }}' \
+            -n '${{ inputs.threads}}' \
+            --dist=loadgroup \
+            --ci-run \
+            --init-timestamp '${{ inputs.init_timestamp }}' \
             ${decrypt_switch} \
             --json-report \
             --json-report-file=logs/.report.json \
